welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:2: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (a==2 && a=b && a=c) {
                 ^redTicket:2: error: type mismatch;
 found   : Unit
 required: Int
	if (a==2 && a=b && a=c) {
        ^